edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";

// Represents event data from a tachograph card.
//
// Corresponds to the `CardEventData` data type.
// See Data Dictionary, Section 2.19.
message EventData {
  // Represents a single event record.
  //
  // Corresponds to the `CardEventRecord` data type.
  // See Data Dictionary, Section 2.20.
  message Record {
    // See Data Dictionary, Section 2.70 for `EventFaultType`.
    int32 event_type = 1;

    // See Data Dictionary, Section 2.162 for `TimeReal`.
    google.protobuf.Timestamp event_begin_time = 2;

    // See Data Dictionary, Section 2.162 for `TimeReal`.
    google.protobuf.Timestamp event_end_time = 3;

    // Part of `VehicleRegistrationIdentification`. See DD Section 2.166.
    string vehicle_registration_nation = 4;

    // Part of `VehicleRegistrationIdentification`. See DD Section 2.166.
    string vehicle_registration_number = 5;
  }

  repeated Record records = 1;
}
